# meanlib

./: LICENSE  README.md  meanlib.py  setup.py
examples/: mean.py  simplemean.py  weighted_mean.py
meanlib/: README.md  __init__.py  license.txt  meanlib.py  setup.cfg
meanlib.egg-info/: PKG-INFO
