[metadata]
name = meanlib
version = 1.0.0
author = Tobia Petrolini
description = A Python package for calculating simple and weighted means, featuring classes for dynamic updates and sliding window functionality.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PinkPantherPC/meanlib.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows

[options]
packages = find:
install_requires =
    numpy >= 1.15.0
python_requires = >=3.7